  * Fix Vcs-Browser URL.
  * libkdeinit4_*.so have been moved to private directory (Closes: #553117). 
  * Make kdebase-runtime depend on kdelibs5-plugins.
  * Bump Standards-Version to 3.8.4: no changes needed.
  * Make kdebase-runtime depend on plasma-scriptengine-javascript (addresses
    aseigo complaints in his blog).
  * Bump oxygen-icon-theme dependency to 4:4.4.

  [ Pino Toscano ]
  * Drop pmount recommend, no more used now. (Closes: #557424)
  * kdebase-runtime does not use kdepimlibs, so kdebase-runtime-dbg does not
    need to depend on kdepimlibs-dbg, but just kdelibs5-dbg. (Closes: #466167)
  * "javascript" -> "JavaScript" in plasma-scriptengine-javascript
    descriptions. (Closes: #567166)
  * Drop kfreebsd-gnu and hurd alternatives for hal recommend, as hal is
    available on these architectures now.
  * Add icoutils suggest to kdebase-runtime, as it contains a thumbnailer for
    icons in Windows executables which uses wrestool and icotool.

  [ George Kiagiadakis ]
  * Drop backported patch 00_1034807_4.4_backport_rtldglobal.diff.
  * Refresh patch 25_khelp_htdig.diff.
  * Add patch 03_disable_usr_lib_install_rpath.diff to disable
    setting RPATH to /usr/lib for the phonon platform plugin.
  * Bump kdelibs5-dev build dependency to >= 4:4.4.0.
  * Bump libsoprano-dev build dependency to >= 2.3.70.
  * Bump libphonon-dev build dependency to >= 4:4.6.0really4.3.80.
  * Add build-dependencies to libattica-dev, libssh-dev, libexiv2-dev.
  * Drop libknotificationitem-1-dev build-dependency.
  * Update installed files.
  * Add build and runtime dependency to shared-desktop-ontologies.

  [ Jonathan Thomas ]
  * Split the KCM for the Phonon Xine backend into a separate package from the
    kdebase-runtime binary package to prevent all of KDE from depending on Xine.
    (Closes: #559748)

  [ Ryan Kavanagh ]
  * Update and apply Martin Olsen's patch to add a manpage for
    /usr/bin/kioclient (Closes: #493054).
