@@ -129,5 +129,6 @@ usr/lib/libkwalletbackend.so.4.4.0
 usr/lib/libmolletnetwork.so.4
 usr/lib/libmolletnetwork.so.4.4.0
 usr/lib/strigi/strigiindex_nepomukbackend.so
+usr/share/applications/kde4/knetattach.desktop
 usr/share/man/man8/nepomukserver.8
 usr/share/man/man8/nepomukservicestub.8
