@@ -1,0 +1,3 @@
+kdebase-runtime: package-name-doesnt-match-sonames
+kdebase-runtime: setgid-binary usr/lib/kde4/libexec/kdesud 2755 root/nogroup
+kdebase-runtime: desktop-command-not-in-package /usr/share/applications/kde4/knetattach.desktop knetattach
