@@ -11,6 +11,10 @@ kdebase-runtime (4:4.4.0-0r4) UNRELEASED; urgency=low
   * Make kdebase-runtime depend on plasma-scriptengine-javascript (addresses
     aseigo complaints in his blog).
   * Bump oxygen-icon-theme dependency to 4:4.4.
+  * Make /usr/share/services/khelpcenter.desktop symlink relative.
+  * Exclude attica_kde.so from kdebase-runtime shlibs.
+  * Move knetattach.desktop to kdebase-runtime "near" its executable.
+  * Add lintian-overrides for kdebase-runtime and khelpcenter4.
 
   [ Pino Toscano ]
   * Drop pmount recommend, no more used now. (Closes: #557424)
